⏳ Fix Institution overflow in Download page

--- a/react-app/src/pages/download/download.css
+++ b/react-app/src/pages/download/download.css
@@ -1,6 +1,5 @@
 .download--container {
   border: 2px solid rgb(221, 210, 210);
-  height: 85vh;
   width: 60vw;
   background-color: #eeecec;
   border-radius: 5px;
